# audioshuttle

./: .env.example  .gitignore  CLAUDE.md  CONTAINER.md  Dockerfile  Dockerfile.e4b  HUMAN-TEST-CHECKLIST.md  IMPLEMENTATION_PLAN.md  KAGGLE_WRITEUP.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  submission.json  test-project.RPP
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-VERIFICATION.md
communication/: audioshuttle_daw_state.json  audioshuttle_fx_trigger  audioshuttle_thinking.jsonl  audioshuttle_watcher_alive
demo-video/: mcp-pretest.sh  mcp-test-results.md  mcp_tester.py
examples/: demo_walkthrough.md
kaggle_kernel/: kernel-metadata.json  notebook.ipynb
reaper_scripts/: __startup.lua  import_midi.lua
scripts/: demo_video.sh
src/audioshuttle/: __init__.py  arrangement_engine.py  audio_engine_e4b.py  cli.py  config.py  context_manager.py  daw_detect.py  error_log.py  genre_profiles.py  gpu_monitor.py  hotkey.py  launcher.py  midi_generator.py  model_server.py  models.py  osc_bridge.py  overlay.py  screen_capture.py  server.py  stt.py  thinking_overlay.py  thinking_stream.py  translator.py  tray.py  voice.py  web.py
tests/: live_test_phase2.py  test_arrangement.py  test_context.py  test_e2e_genre.py  test_genre_pipeline.py  test_genre_profiles.py  test_model_server.py  test_osc_bridge.py  test_stt.py  test_translator.py  test_voice.py  test_web.py
(+66 files in other folders)
