[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audioshuttle"
version = "0.1.0"
description = "AI-agnostic DAW control via MCP — bridge any LLM to Reaper"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "fastmcp>=3.0",
    "python-osc>=1.9",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
web = ["fastapi>=0.110", "uvicorn>=0.29", "jinja2>=3.1", "python-multipart>=0.0.9"]
stt = ["faster-whisper>=1.0"]
tray = ["pystray>=0.19", "Pillow>=10.0"]
all = ["audioshuttle[web,stt,tray]"]

[project.scripts]
audioshuttle = "audioshuttle.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
